p3/scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-app-service
  labels:
    app: will
spec:
  type: LoadBalancer
  selector:
      app: will
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
